# CAFGIR

./: .gitignore  README.md  pyproject.toml
src/: configs.py  engine.py  train.py
src/data/: dataset.py
src/losses/: hybrid_loss.py  old_hybrid_loss.py  proxy_anchor.py
src/models/: CBAM.py  PWCA.py  embedding_model.py
src/optimizer/: sam.py
utils/: combine.py  downsize_images.py  downsize_images2.py  same_size.py  train_data_augmentation.py  train_data_augmentation2.py  val_data_augmentation.py  val_data_augmentation2.py
